Fixed issues with scrollbar on blogpost

--- a/src/assets/style/layout.scss
+++ b/src/assets/style/layout.scss
@@ -67,7 +67,6 @@ a {
 
 .container {
     display: flex;
-    overflow: hidden;
 }
 
 main {
@@ -94,8 +93,6 @@ main {
   
 .content {
     flex-basis: 100%;
-
-    height: 100vh; 
     overflow: auto;
     position: relative;
 
